2011-02-24  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Part.py : Removed a failing assert in lack of a
	better solution. The result may perhaps differ sometimes from
	the true result, depending on the definition heap before/after.
	

2010-06-08  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Don't multiply
	with SHIFT if _PyLong_Frexp is used
	
	* guppy/heapy/test/test_Part.py (MixedCase.test_1): Changed the
	test result if sys.version >= 2.7; because the size of strings
	was optimized 8 bytes. (How ? )

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Used
	_PyLong_Frexp instead of _PyLong_AsScaledDouble if
	PY_VERSION_HEX >= 0x02070000 . (_PyLong_AsScaledDouble disappeared
	but I think I should complain, couldn't figure out how to add an
	issue with the tracker.)

2010-02-16  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/sets/test.py (Test.test16.tsv): Expected OverflowError
	instead of ValueError, an inconsequential change to do with
	possiboe test error reporting.

2010-02-15  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_Classifiers.py
	(SpecialCases.test_dictowner, SpecialCases.test_alt_retclaset):
	Changed to use clock() instead of time() for cpu time
	measurements. Added adaptive loop count as the time in some cases
	were down to 0.01 s - which may be the resolution of clock(). Now
	makes the time be about 0.5-1 s regardless of CPU speed.

	* guppy/heapy/test/test_Path.py (NewTestCase.test_1): 
	Changed to use clock() instead of time() for cpu time measurements
	in a test that is not currently used, just in case we begin to use it.
	
	
2010-02-14  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/nodeset.c (nodeset_op_set): Just an inconsequential
	change, it had two returns after each other.

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): 
	In the latest change where a loop over pos was added, changed type
	from int to NyBit.
	